# FastapiAsyncHm

./: mydb.db  pyproject.toml
app/db/: __init__.py
app/db/models/: user.py
app/routes/: user.py
app/schemas/: user.py
